--- a/view/frontend/layout/algolia_search_handle.xml
+++ b/view/frontend/layout/algolia_search_handle.xml
@@ -9,7 +9,7 @@
             <block class="Algolia\AlgoliaSearch\Block\Algolia" name="algolia.internals.commonjs" template="Algolia_AlgoliaSearch::internals/commonjs.phtml"/>
         </referenceBlock>
         <referenceBlock name="main.content">
-            <block class="Algolia\AlgoliaSearch\Block\Algolia" before="-" name="algolia.internals.beforecontent" template="Algolia_AlgoliaSearch::internals/beforecontent.phtml"/>
+            <block class="Magento\Framework\View\Element\Template" before="-" name="algolia.beforecontent" template="Algolia_AlgoliaSearch::internals/beforecontent.phtml"/>
         </referenceBlock>
     </body>
 </page>
