--- a/view/frontend/templates/autocomplete/product.phtml
+++ b/view/frontend/templates/autocomplete/product.phtml
@@ -3,6 +3,8 @@
 /** @var \Algolia\AlgoliaSearch\Block\Algolia $block */
 $priceKey = $block->getPriceKey();
 
+$origFormatedVar = 'price' . $priceKey . '_original_formated';
+
 ?>
 
 <!-- Product hit template -->
@@ -23,22 +25,24 @@ $priceKey = $block->getPriceKey();
                 {{#_highlightResult.color}}
                 {{#_highlightResult.color.value}}
                 <span>
-                   {{#categories_without_path}} | {{/categories_without_path}} Color:  {{{_highlightResult.color.value}}}
+                    {{#categories_without_path}} | {{/categories_without_path}}
+                    Color: {{{_highlightResult.color.value}}}
                 </span>
                 {{/_highlightResult.color.value}}
                 {{/_highlightResult.color}}
             </div>
 
             <div class="algoliasearch-autocomplete-price">
-                    <span class="after_special {{#price<?php echo $priceKey; ?>_original_formated}}promotion{{/price<?php echo $priceKey; ?>_original_formated}}">
+                    <span class="after_special
+                                {{#<?php echo $origFormatedVar; ?>}}promotion{{/<?php echo $origFormatedVar; ?>}}">
                         {{price<?php echo $priceKey; ?>_formated}}
                     </span>
 
-                {{#price<?php echo $priceKey; ?>_original_formated}}
+                {{#<?php echo $origFormatedVar; ?>}}
                     <span class="before_special">
-                        {{price<?php echo $priceKey; ?>_original_formated}}
+                        {{<?php echo $origFormatedVar; ?>}}
                     </span>
-                {{/price<?php echo $priceKey; ?>_original_formated}}
+                {{/<?php echo $origFormatedVar; ?>}}
             </div>
         </div>
     </a>
