--- a/view/frontend/templates/instant/hit.phtml
+++ b/view/frontend/templates/instant/hit.phtml
@@ -1,8 +1,6 @@
 <?php
 
-/**
- * @var \Algolia\AlgoliaSearch\Block\Instant\Hit $block
- */
+/** @var \Algolia\AlgoliaSearch\Block\Instant\Hit $block */
 
 $priceKey = $block->getPriceKey();
 
@@ -40,17 +38,17 @@ $origFormatedVar = 'price' . $priceKey . '_original_formated';
                                     <div class="price-wrapper">
                                         <div>
                                             <span class="after_special
-                                                    {{#<?php echo $origFormatedVar; ?>}}
+                                                    {{#<?php echo $block->escapeHtml($origFormatedVar); ?>}}
                                                         promotion
-                                                    {{/<?php echo $origFormatedVar; ?>}}">
-                                                {{price<?php echo $priceKey; ?>_formated}}
+                                                    {{/<?php echo $block->escapeHtml($origFormatedVar); ?>}}">
+                                                {{price<?php echo $block->escapeHtml($priceKey); ?>_formated}}
                                             </span>
 
-                                            {{#<?php echo $origFormatedVar; ?>}}
+                                            {{#<?php echo $block->escapeHtml($origFormatedVar); ?>}}
                                                 <span class="before_special">
-                                                    {{<?php echo $origFormatedVar; ?>}}
+                                                    {{<?php echo $block->escapeHtml($origFormatedVar); ?>}}
                                                 </span>
-                                            {{/<?php echo $origFormatedVar; ?>}}
+                                            {{/<?php echo $block->escapeHtml($origFormatedVar); ?>}}
                                         </div>
                                     </div>
                                 </div>
