--- a/view/frontend/templates/instant/stats.phtml
+++ b/view/frontend/templates/instant/stats.phtml
@@ -1,13 +1,13 @@
 <script type="text/template" id="instant-stats-template">
-    {{#hasOneResult}}<strong>1</strong> <?php echo __('result'); ?> found{{/hasOneResult}}
+    {{#hasOneResult}}<strong>1</strong> <?php echo $block->escapeHtml(__('result')); ?> found{{/hasOneResult}}
 
     {{#hasManyResults}}
         {{^hasNoResults}}{{first}}-{{last}} out of{{/hasNoResults}}
         <strong>
             {{#helpers.formatNumber}}{{nbHits}}{{/helpers.formatNumber}}
-            <?php echo __('results found'); ?>
+            <?php echo $block->escapeHtml(__('results found')); ?>
         </strong>
     {{/hasManyResults}}
 
-    <?php echo __('in'); ?> {{seconds}} <?php echo __('seconds'); ?>
+    <?php echo $block->escapeHtml(__('in')); ?> {{seconds}} <?php echo $block->escapeHtml(__('seconds')); ?>
 </script>
