Improve UX of configuration

--- a/view/adminhtml/templates/adminjs.phtml
+++ b/view/adminhtml/templates/adminjs.phtml
@@ -2,6 +2,13 @@
     .algolia td {
         padding-top: 1rem !important;
     }
+
+    .algolia-config-warning {
+        font-size: 30px;
+        color: #D83900;
+        position: relative;
+        top: 6px;
+    }
 </style>
 
 <script>
